--- a/Web/planesdesalud.html
+++ b/Web/planesdesalud.html
@@ -20,31 +20,53 @@
     <nav>
       <ul>
         <li><a href="/principal.html"> Inicio </a></li>
-        <li><a href="#principal">Servicios</a></li>
+        <li><a href="/principal.html">Servicios</a></li>
         <li><a href="/personal.html">Equipo</a></li>
         <li><a href="/planesdesalud.html">Seguros</a></li>
         <li>
           <a href="https://revistas-veterinaria.multimedica.es/" target="_blank"
-            >Blog</a
-          >
+            >Blog
+          </a>
         </li>
         <li><a href="#contacto"> Contacto </a></li>
       </ul>
     </nav>
     <main>
       <div class="plandesalud">
-        <h3 class="plandesalud">Perro cachorro y senior</h3>
+        <h2 class="plandesalud">Medicina preventiva: Planes de salud</h2>
         <p class="plandesalud">
-          Cachorro: Nacimiento a 1 año de edad <br />
-          Senior: Más de 7 años
+          Con la inversión en medicina preventiva buscamos promover la
+          longevidad y salud de las mascotas y la tranquilidad de los
+          propietarios.
+          <br />
+          El contar con un plan anual estructurado nos ayuda a
+          <b>prevenir enfermedades</b>,<b>planificar el coste monetario</b> de
+          nuestra mascota, teniendo acceso a gran cantidad de servicios
+          gratuitos o con descuento. <br />
+          Para la mascota, las visitas periodicas desde cachorro reducen las
+          conductas de estrés y el miedo a las manipulaciones y las pruebas, de
+          manera que en caso de enfermedad o ingreso se reduzca su sufrimiento
+          psicológico.
+          <br />
         </p>
+
+        <hr />
+        <h3 class="plandesalud">Perro cachorro y senior</h3>
+
         <ul class="planesdesalud">
+          <p class="planesdesalud">
+            Cachorro: Nacimiento a 1 año de edad <br />
+            Senior: Más de 7 años
+          </p>
           <li>Microchip y pasaporte</li>
           <li>Vacunas esenciales: 3 dosis de cachorro</li>
           <li>Vacunas opcionales: rabia y tos de las perreras</li>
           <li>Analítica de sangre completa</li>
           <li>Coprología y urianálisi</li>
           <li>Pruebas de imagen: ecografía abdomen y 4 radiografías</li>
+          <li>Consultas con cita previa ilimitadas gratuitas</li>
+          <li>Desparasitaciones externas: mensuales</li>
+          <li>Desparasitaciones internas: trimestrales</li>
         </ul>
 
         <h3 class="plandesalud">Perro adulto</h3>
@@ -55,6 +77,9 @@
           <li>Analítica de sangre completa</li>
           <li>Coprología y urianálisi</li>
           <li>Pruebas de imagen: ecografía abdomen o 2 radiografías</li>
+          <li>Consultas con cita previa ilimitadas gratuitas</li>
+          <li>Desparasitaciones externas: mensuales</li>
+          <li>Desparasitaciones internas: trimestrales</li>
         </ul>
         <h3 class="plandesalud">Gato cachorro y senior</h3>
         <p class="plandesalud">
@@ -69,12 +94,37 @@
           <li>Analítica de sangre completa</li>
           <li>Coprología y urianálisi</li>
           <li>Pruebas de imagen: ecografía abdomen +</li>
+          <li>Consultas con cita previa ilimitadas gratuitas</li>
+          <li>Desparasitaciones externas: mensuales</li>
+          <li>Desparasitaciones internas: trimestrales</li>
         </ul>
 
         <h3 class="plandesalud">Gato adulto</h3>
         <p class="plandesalud"></p>
+        <ul class="planesdesalud">
+          <li>Microchip y pasaporte</li>
+          <li>Vacunas esenciales: 3 dosis de cachorro</li>
+          <li>Vacunas opcionales: rabia y tos de las perreras</li>
+          <li>Analítica de sangre completa</li>
+          <li>Coprología y urianálisi</li>
+          <li>Pruebas de imagen: ecografía abdomen +</li>
+          <li>Consultas con cita previa ilimitadas gratuitas</li>
+          <li>Desparasitaciones externas: mensuales</li>
+          <li>Desparasitaciones internas: trimestrales</li>
+        </ul>
         <h3 class="plandesalud">Roedores y lagomorfos</h3>
         <p class="plandesalud"></p>
+        <ul class="planesdesalud">
+          <li>Microchip y pasaporte</li>
+          <li>Vacunas esenciales: 3 dosis de cachorro</li>
+          <li>Vacunas opcionales: rabia y tos de las perreras</li>
+          <li>Analítica de sangre completa</li>
+          <li>Coprología y urianálisi</li>
+          <li>Pruebas de imagen: ecografía abdomen +</li>
+          <li>Consultas con cita previa ilimitadas gratuitas</li>
+          <li>Desparasitaciones externas: mensuales</li>
+          <li>Desparasitaciones internas: trimestrales</li>
+        </ul>
       </div>
     </main>
 
