--- a/Web/planesdesalud.html
+++ b/Web/planesdesalud.html
@@ -43,21 +43,21 @@
           <b>prevenir enfermedades</b>,<b>planificar el coste monetario</b> de
           nuestra mascota, teniendo acceso a gran cantidad de servicios
           gratuitos o con descuento. <br />
-          Para la mascota, las visitas periodicas desde cachorro reducen las
-          conductas de estrés y el miedo a las manipulaciones y las pruebas, de
-          manera que en caso de enfermedad o ingreso se reduzca su sufrimiento
-          psicológico.
+          Para la mascota, las visitas periodicas desde cachorro
+          <b> reducen las conductas de estrés</b> y el
+          <b> miedo a las manipulaciones</b> y las pruebas diagnósticas, de
+          manera que en caso de enfermedad o ingreso se reduzca su
+          <b> sufrimiento psicológico.</b>
           <br />
         </p>
 
         <hr />
         <h3 class="plandesalud">Perro cachorro y senior</h3>
-
-        <ul class="planesdesalud">
-          <p class="planesdesalud">
-            Cachorro: Nacimiento a 1 año de edad <br />
-            Senior: Más de 7 años
-          </p>
+        <p class="plandesalud">
+          Cachorro: Nacimiento a 1 año de edad <br />
+          Senior: Más de 7 años
+        </p>
+        <ul class="plandesalud">
           <li>Microchip y pasaporte</li>
           <li>Vacunas esenciales: 3 dosis de cachorro</li>
           <li>Vacunas opcionales: rabia y tos de las perreras</li>
@@ -71,7 +71,7 @@
 
         <h3 class="plandesalud">Perro adulto</h3>
         <p class="plandesalud">Perros entre 2 y 7 años</p>
-        <ul class="planesdesalud">
+        <ul class="plandesalud">
           <li>Vacunas anuales: pentavalente</li>
           <li>Vacunas opcionales: rabia y tos de las perreras</li>
           <li>Analítica de sangre completa</li>
@@ -81,27 +81,27 @@
           <li>Desparasitaciones externas: mensuales</li>
           <li>Desparasitaciones internas: trimestrales</li>
         </ul>
+
         <h3 class="plandesalud">Gato cachorro y senior</h3>
         <p class="plandesalud">
-          Cachorro: Nacimiento hasta 1 año de edad. <br />
-          Senior: +8 años
+          Cachorro: desde el nacimiento hasta 1 año de edad. <br />
+          Senior: gatos de más de 8 años
         </p>
-
-        <ul class="planesdesalud">
+        <ul class="plandesalud">
           <li>Microchip y pasaporte</li>
-          <li>Vacunas esenciales: 3 dosis de cachorro</li>
-          <li>Vacunas opcionales: rabia y tos de las perreras</li>
+          <li>Vacunas esenciales: 2 dosis de cachorro</li>
+          <li>Vacunas opcionales: leucemia y rabia</li>
           <li>Analítica de sangre completa</li>
           <li>Coprología y urianálisi</li>
-          <li>Pruebas de imagen: ecografía abdomen +</li>
+          <li>Pruebas de imagen: ecografía abdomen/pecho y 4 radiografías</li>
           <li>Consultas con cita previa ilimitadas gratuitas</li>
           <li>Desparasitaciones externas: mensuales</li>
           <li>Desparasitaciones internas: trimestrales</li>
         </ul>
 
         <h3 class="plandesalud">Gato adulto</h3>
-        <p class="plandesalud"></p>
-        <ul class="planesdesalud">
+        <p class="plandesalud">Gatos entre 1 y 8 años</p>
+        <ul class="plandesalud">
           <li>Microchip y pasaporte</li>
           <li>Vacunas esenciales: 3 dosis de cachorro</li>
           <li>Vacunas opcionales: rabia y tos de las perreras</li>
@@ -112,18 +112,18 @@
           <li>Desparasitaciones externas: mensuales</li>
           <li>Desparasitaciones internas: trimestrales</li>
         </ul>
-        <h3 class="plandesalud">Roedores y lagomorfos</h3>
-        <p class="plandesalud"></p>
-        <ul class="planesdesalud">
+
+        <h3 class="plandesalud">Roedores, hurones lagomorfos</h3>
+        <p class="plandesalud">Conejo, hurón, rata/ratón y jerbo.</p>
+        <ul class="plandesalud">
           <li>Microchip y pasaporte</li>
-          <li>Vacunas esenciales: 3 dosis de cachorro</li>
-          <li>Vacunas opcionales: rabia y tos de las perreras</li>
+          <li>Vacunas esenciales: según especie</li>
+          <li>Vacunas opcionales: rabia</li>
           <li>Analítica de sangre completa</li>
           <li>Coprología y urianálisi</li>
-          <li>Pruebas de imagen: ecografía abdomen +</li>
+          <li>Pruebas de imagen: 2 radiografías</li>
           <li>Consultas con cita previa ilimitadas gratuitas</li>
-          <li>Desparasitaciones externas: mensuales</li>
-          <li>Desparasitaciones internas: trimestrales</li>
+          <li>Desparasitaciones: según especie</li>
         </ul>
       </div>
     </main>
