--- a/Web/personal.html
+++ b/Web/personal.html
@@ -23,7 +23,7 @@
     <nav>
       <ul>
         <li><a href="/principal.html"> Inicio </a></li>
-        <li><a href="#principal">Servicios</a></li>
+        <li><a href="/principal.html">Servicios</a></li>
         <li><a href="/personal.html">Equipo</a></li>
         <li><a href="/planesdesalud.html">Seguros</a></li>
         <li>
@@ -34,8 +34,53 @@
         <li><a href="#contacto"> Contacto </a></li>
       </ul>
     </nav>
-    <main>
-      <div></div>
+
+    <main class="equipo">
+      <div class="personal">
+        <div class="equipo">
+          <img
+            src="/imagenes/066ea6c8791835cf48b3fe239d9841f1.jpg"
+            class="personal"
+          />
+          <div>
+            <p class="nombres">Laura Battle</p>
+            <p class="cargo">Veterinaria</p>
+          </div>
+        </div>
+
+        <div class="equipo">
+          <img
+            src="/imagenes/64d1693ff1f22c4ab645109dcca5a8f7.jpg"
+            class="personal"
+          />
+          <div>
+            <p class="nombres">Alejandro Cerquiño</p>
+            <p class="cargo">Veterinario</p>
+          </div>
+        </div>
+
+        <div class="equipo">
+          <img
+            src="/imagenes/363c680403ce153c5afadf4ff4d9fd2e.jpg"
+            class="personal"
+          />
+          <div>
+            <p class="nombres">Ana Díaz</p>
+            <p class="cargo">Enfermera</p>
+          </div>
+        </div>
+
+        <div class="equipo">
+          <img
+            src="/imagenes/86aacd9f8c847c4daa1607d360f305a5.jpg"
+            class="personal"
+          />
+          <div>
+            <p class="nombres">Susana Perez</p>
+            <p class="cargo">Enfermera</p>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer id="contacto">
