--- a/Web/personal.html
+++ b/Web/personal.html
@@ -40,8 +40,12 @@
             class="personal"
           />
           <div>
-            <p class="nombres">Laura Battle</p>
-            <p class="cargo">Veterinaria</p>
+            <p class="nombres">Laura Batle</p>
+            <p class="cargo">
+              Veterinaria graduada por la Universidad de Barcelona.
+              <br />
+              Especializada en animales exóticos y cirugía no invasiva. <br />
+            </p>
           </div>
         </div>
 
@@ -52,7 +56,11 @@
           />
           <div>
             <p class="nombres">Alejandro Cerquiño</p>
-            <p class="cargo">Veterinario</p>
+            <p class="cargo">
+              Veterinario graduado por la Universidad de Santiago de Compostela
+              <br />
+              Especializado en medicina felina y medicina de urgencias.
+            </p>
           </div>
         </div>
 
@@ -63,7 +71,13 @@
           />
           <div>
             <p class="nombres">Ana Díaz</p>
-            <p class="cargo">Enfermera</p>
+            <p class="cargo">
+              Enfermera veterinaria titulada por la academia ISED <br />
+              Técnica Superior de Laboratorio Clínico y Biomédico <br />
+              <br />
+              Responsable del servicio de laboratorio interno y consultas de
+              exóticos. <br />
+            </p>
           </div>
         </div>
 
@@ -74,7 +88,13 @@
           />
           <div>
             <p class="nombres">Susana Perez</p>
-            <p class="cargo">Enfermera</p>
+            <p class="cargo">
+              Enfermera veterinaria titulada por la academia ISED. <br />
+              Tecnica Superior de Radiodiagnóstico y Medicina Nuclear.
+              <br />
+              <br />
+              Se encarga del servicio de nutrición, UCI y hospitalización.
+            </p>
           </div>
         </div>
       </div>
